--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "main": "server.js",
   "scripts": {
     "dev": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "resetDB":"node prisma/resetDB.js"
   },
+  "prisma":{
+    "seed":"node prisma/seed.js"
+  },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
