--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "dev": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "resetDB":"node prisma/resetDB.js"
+    "resetDB": "node prisma/resetDB.js"
   },
-  "prisma":{
-    "seed":"node prisma/seed.js"
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,9 +17,12 @@
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "prisma": "^6.3.1",
